styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    user-select: none;
}

html {
    width: 100%;
    height: 100%;
    background-color: lightcyan;
}

body {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    position: relative;
}

.world {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: absolute;
    overflow: hidden;
    text-align: center;
    font-size: 100%;
}

canvas#game {
    width: 100%;
    height: 100%;
    background-image: linear-gradient(#DF73FF, #66CCFF);
    position: absolute;
    border-radius: 7px;
    z-index: 0;
}

#touchArea {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-items: center;
    width: 100%;
    height: 100%;
    position: absolute;
}

#leftArea {
    width: 50%;
    height: 100%;
    position: relative;
}

#rightArea {
    width: 50%;
    height: 100%;
    position: relative;
}

#header {
    text-align: center;
    color: gold;
    font-size: 5vw;
    font-family: "Courier New";
    max-height: 30%;
    top: 25%;
    overflow: hidden;
    z-index: 5;
}

.btns {
    display: flex;
    flex-direction: column;
    text-align: center;
    min-width: 30%;
    z-index: 6;
    justify-content: space-between;
    justify-self: center;
    height: 20%;
    margin-top: 5%;
}

#newGame, #instrBtn, #hsBtn, #backBtn {
    text-align: center;
    border: 2px solid goldenrod;
    border-radius: 7px;
    background-color: gold;
    color: orangered;
    font-size: 2vw;
    font-weight: bold;
    font-family: "Courier New";
    min-width: 30%;
    z-index: 6;
    padding: 5%;
    margin: 2%;
}

#newGame {
    bottom: 50%;
}

#instrBtn {
    top: 60%;
}

#hsBtn {
    top: 70%;
}

#backBtn {
    padding: 2%;
    display: none;
    position: absolute;
}

#instr {
    text-align: center;
    vertical-align: middle;
    border: 2px solid goldenrod;
    border-radius: 7px;
    background-color: gold;
    color: orangered;
    font-size: 1.7vw;
    font-weight: bold;
    font-family: "Courier New";
    min-width: 40%;
    max-height: 40%;
    margin: 5px 0;
    z-index: 5;
    position: absolute;
    top: 20%;
    padding: 1%;
    line-height: 130%;
} 


#hsBoard {
    text-align: center;
    vertical-align: middle;
    border: 2px solid goldenrod;
    border-radius: 7px;
    background-color: gold;
    color: orangered;
    font-size: 1.7vw;
    font-weight: bold;
    font-family: "Courier New";
    min-width: 40%;
    min-height: 75%;
    z-index: 5;
    position: relative;
    overflow: none;
    top: 7%;
    padding-top: 2%;
    padding-left: 3%;
    padding-right: 3%;
    padding-bottom: 1%;
}

ul {
    height: 100%;
    margin-top: 4%;
}

.hsLi {
    display: flex;
    justify-content: space-between;
    height: 9%;
}

#hsBoard p {
    padding: 2%;
}

#audio {
    position: absolute;
    width: 5%;
    height: 5%;
    top: 4.5%;
    left: 88%;
    background-image: url('img/audioOn.png');
    background-repeat: no-repeat;
    background-size: contain;
    text-align: right;
    z-index: 6;
}

#music {
    position: absolute;
    width: 6%;
    height: 6%;
    top: 4%;
    left: 93%;
    background-image: url('img/musicOff.png');
    background-repeat: no-repeat;
    background-size: contain;
    text-align: right;
    z-index: 6;
}

@media only screen and (min-width: 901px) and (max-width: 1200px) {
    #header {
        top: 20%;
    }

    #newGame, #instrBtn, #hsBtn, #backBtn {
        font-size: 1.5vw;
    }

    .btns {
        min-width: 35%;
    }

    #instr {
        padding-top: 3%;
        margin-bottom: 5%;
        font-size: 1.8vw;
        min-height: 55%;
        top: 18%;
    }
}

@media only screen and (min-width: 701px) and (max-width: 900px) {
    #header {
        top: 20%;
    }

    #newGame, #instrBtn, #hsBtn, #backBtn {
        font-size: 2vw;
    }

    .btns {
        min-width: 35%;
    }

    #instr {
        padding-top: 3%;
        margin-bottom: 5%;
        font-size: 1.8vw;
        min-height: 45%;
        top: 18%;
    }
}

@media only screen and (min-width: 601px) and (max-width: 700px) {
    #header {
        top: 15%;
    }

    #newGame, #instrBtn, #hsBtn, #backBtn {
        font-size: 2vw;
    }

    .btns {
        min-width: 40%;
    }

    #instr {
        font-size: 2vw;
        min-height: 45%;
        padding-top: 3%;
        top: 18%;
    }
}

@media only screen and (max-width: 600px) {
    #header {
        top: 10%;
    }

    #newGame, #instrBtn, #hsBtn, #backBtn {
        font-size: 2.5vw;
    }

    .btns {
        min-width: 45%;
        max-height: 100%;
    }

    #backBtn {
        top: 90%;
    }

    #instr {
        font-size: 3vw;
        min-height: 55%;
        width: 40%;
        padding-top: 2%;
        top: 8%;
    }

    #hsBoard {
        font-size: 2vw;
    }
}

/*  BACKGROUND ANIMATIONS  */


#cloudLarge {
    width: 27%;
    height: 20%;
    position: absolute;
    z-index: 1;

    background-image: url("img/cloud.png");
    background-repeat: no-repeat;
    background-size: contain;

    animation: large 70s infinite linear;
}

@keyframes large{
    0% {
        left: 100%;
        top: 50%;
    }

    30% {
        left: 55%;
        top: 53%
    }

    65% {
        left: 15%;
        top: 55%
    }

    100% {
        left: -30%;
        top: 50%
    }
}

#cloudMedium {
    width: 20%;
    height: 12%;
    position: absolute;
    z-index: 1;

    background-image: url("img/cloud.png");
    background-repeat: no-repeat;
    background-size: contain;

    animation: medium 50s infinite linear;
}

@keyframes medium{
    0% {
        left: 100%;
        top: 27%;
    }

    20% {
        left: 100%;
        top: 27%;
    }

    50% {
        left: 60%;
        top: 31%;
    }

    70% {
        left: 30%;
        top: 34%;
    }

    100% {
        left: -30%;
        top: 37%;
    }
}

#cloudSmall {
    width: 12%;
    height: 8%;
    position: absolute;
    z-index: 1;

    background-image: url("img/cloud.png");
    background-repeat: no-repeat;
    background-size: contain;

    animation: small 65s infinite linear;
}

@keyframes small{
    0% {
        left: 100%;
        top: 62%;
    }

    40% {
        left: 100%;
        top: 62%;
    }

    70% {
        left: 40%;
        top: 57%;
    }

    100% {
        left: -30%;
        top: 55%;
    }
}

#cloudSmall2 {
    width: 12%;
    height: 8%;
    position: absolute;
    z-index: 1;

    background-image: url("img/cloud.png");
    background-repeat: no-repeat;
    background-size: contain;

    animation: small2 80s infinite linear;
}

@keyframes small2{
    0% {
        left: 100%;
        top: 10%;
    }

    40% {
        left: -30%;
        top: 15%;
    }

    100% {
        left: -30%;
        top: 10%;
    }
}

#ufo {
    width: 10%;
    height: 8%;
    position: absolute;
    top: 27%;
    z-index: 1;

    background-image: url("img/ufo.png");
    background-repeat: no-repeat;
    background-size: contain;

    animation: ufoFly 140s infinite linear;
}

@keyframes ufoFly{
    0% {
        left: 100%;
    }

    97% {
        left: 100%;
        top: 30%;
    }

    100% {
        left: -30%;
        top: 30%;
    }
}

#airplane {
    width: 15%;
    height: 10%;
    position: absolute;
    top: 14%;
    z-index: 2;

    background-image: url("img/airplane.png");
    background-repeat: no-repeat;
    background-size: contain;

    animation: airFly 60s infinite linear;
}

@keyframes airFly{
    0% {
        left: -40%;
    }

    20% {
        left: -40%;
    }

    100% {
        left: 100%
    }
}

#ye {
    width: 30%;
    height: 30%;
    position: absolute;
    top: 30%;
    z-index: 1;
    opacity: 0.1;
    overflow: none;

    background-image: url("img/ye.png");
    background-repeat: no-repeat;
    background-size: contain;

    animation: yeFly 140s infinite linear;
}

@keyframes yeFly{
    0% {
        left: 100%;
        top: 32%;
    }

    80% {
        left: 100%;
        top: 32%;
    }

    82.5% {
        left: 85%;
        top: 35%;
    }

    85% {
        left: 70%;
        top: 38%;
    }

    87.5% {
        left: 55%;
        top: 35%;
    }

    90% {
        left: 40%;
        top: 32%;
    }

    92.5% {
        left: 25%;
        top: 35%;
    }

    95% {
        left: 10%;
        top: 38%;
    }

    97.5% {
        left: -10%;
        top: 35%;
    }

    100% {
        left: -30%;
        top: 30%;
    }
}

